--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "lit-element": "^3.0.1",
-    "lit-html": "^2.0.1"
+    "lit": "^2.0.2"
   }
 }
