--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook",
-    "build": "webpack"
+    "build": "rollup -c",
+    "start": "serve -C dist",
+    "build:start": "npm run build && npm start"
   },
   "repository": {
     "type": "git",
@@ -22,11 +24,21 @@
   "homepage": "https://github.com/grvpanchal/bootstrap-web-components#readme",
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@rollup/plugin-multi-entry": "^4.1.0",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/web-components": "^6.3.12",
-    "babel-loader": "^8.2.3"
+    "babel-loader": "^8.2.3",
+    "css-loader": "^3.6.0",
+    "extract-loader": "^5.1.0",
+    "lit-scss-loader": "^1.1.0",
+    "rollup": "^2.58.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-lit-css": "^3.2.1",
+    "sass": "^1.43.3",
+    "sass-loader": "^10.2.0",
+    "serve": "^12.0.1"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
